Getting create routing working

--- a/TaskBoard/pages/create/create.css
+++ b/TaskBoard/pages/create/create.css
@@ -13,7 +13,7 @@
         border: none;
     }
 
-        .create form fieldset label {
+        .create form fieldset span {
             display: inline-block;
             width: 200px;
         }
